packages/vaadin-lumo-styles/src/components/menu-bar.css
/**
 * @license
 * Copyright (c) 2017 - 2026 Vaadin Ltd.
 * This program is available under Apache License Version 2.0, available at https://vaadin.com/license/
 */
@media lumo_components_menu-bar {
  :host {
    display: block;
  }

  :host([hidden]) {
    display: none !important;
  }

  [part='container'] {
    position: relative;
    display: flex;
    width: 100%;
    flex-wrap: nowrap;
    overflow: hidden;
  }

  :host([has-single-button]) ::slotted(vaadin-menu-bar-button) {
    border-radius: var(--lumo-border-radius-m);
  }

  :host([theme~='end-aligned']) ::slotted(vaadin-menu-bar-button[first-visible]),
  :host([theme~='end-aligned'][has-single-button]) ::slotted(vaadin-menu-bar-button) {
    margin-inline-start: auto;
  }
}

